force-app/main/default/objects/Prijsmanagement__c/Prijsmanagement__c.object-meta.xml
<CustomObject>
    <label>Prijsmanagement</label>
    <nameField>
        <displayFormat>PM-{0000000}</displayFormat>
        <label>Prijsmanagementnummer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prijsmanagement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>