force-app/main/default/objects/Prijsmanagement__c/fields/Actief__c.field-meta.xml
<CustomField>
    <fullName>Actief__c</fullName>
    <formula>AND(
    TODAY() &gt;= Geldig_vanaf__c,
    OR(
        ISBLANK(Geldig_tot__c),
        TODAY() &lt;= Geldig_tot__c
    )
)</formula>
    <label>Actief</label>
    <type>Checkbox</type>
</CustomField>