force-app/main/default/objects/Prijsmanagement__c/fields/Bovenste_staffelwaarde__c.field-meta.xml
<CustomField>
    <fullName>Bovenste_staffelwaarde__c</fullName>
    <description>Maximum value of that this price will fall into.</description>
    <label>Bovenste staffelwaarde</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>