force-app/main/default/objects/Prijsmanagement__c/fields/Eenheidsprijs__c.field-meta.xml
<CustomField>
    <fullName>Eenheidsprijs__c</fullName>
    <description>Prijs that will be used on quantity</description>
    <label>Eenheidsprijs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>