force-app/main/default/objects/Prijsmanagement__c/fields/Geldig_tot__c.field-meta.xml
<CustomField>
    <fullName>Geldig_tot__c</fullName>
    <description>End date of the price management</description>
    <label>Geldig tot</label>
    <type>Date</type>
</CustomField>