force-app/main/default/objects/Prijsmanagement__c/fields/Geldig_vanaf__c.field-meta.xml
<CustomField>
    <fullName>Geldig_vanaf__c</fullName>
    <description>Start date that the prijs management starts</description>
    <label>Geldig vanaf</label>
    <type>Date</type>
</CustomField>