force-app/main/default/objects/Prijsmanagement__c/fields/Minimale_prijs__c.field-meta.xml
<CustomField>
    <fullName>Minimale_prijs__c</fullName>
    <description>The start price the product will be mimimaly sold for.</description>
    <label>Minimale prijs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>