force-app/main/default/objects/Prijsmanagement__c/fields/Onderste_staffelwaarde__c.field-meta.xml
<CustomField>
    <fullName>Onderste_staffelwaarde__c</fullName>
    <description>Minimum value to fall within this price management</description>
    <label>Onderste staffelwaarde</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>