force-app/main/default/objects/Prijsmanagement__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product the price mangement is related to</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Prijsmanagement</relationshipLabel>
    <relationshipName>Prijsmanagement</relationshipName>
    <type>Lookup</type>
</CustomField>