force-app/main/default/objects/Prijsmanagement__c/fields/Regiotoeslag_toepasbaar__c.field-meta.xml
<CustomField>
    <fullName>Regiotoeslag_toepasbaar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is checked and the product is added region toeslag needs to be added.</description>
    <label>Regiotoeslag toepasbaar</label>
    <type>Checkbox</type>
</CustomField>