force-app/main/default/objects/Prijsmanagement__c/fields/Relatieve_prijs__c.field-meta.xml
<CustomField>
    <fullName>Relatieve_prijs__c</fullName>
    <inlineHelpText>Prijs is gebaseerd op het aangegeven percentage van de prijs van het hoofdproduct.</inlineHelpText>
    <label>Relatieve prijs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>