force-app/main/default/objects/Prijsmanagement__c/fields/Standard_Price_Book_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Standard_Price_Book_Entry_Id__c</fullName>
    <description>Used for automations to be able to create an Opportunity Product without also looking up the price book entry</description>
    <label>Standard Price Book Entry Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>