force-app/main/default/objects/Prijsmanagement__c/validationRules/Geldig_tot_Not_Before_Vanaf.validationRule-meta.xml
<ValidationRule>
    <fullName>Geldig_tot_Not_Before_Vanaf</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT(ISBLANK( Geldig_tot__c)),
 Geldig_tot__c&lt;  Geldig_vanaf__c 
)</errorConditionFormula>
    <errorDisplayField>Geldig_tot__c</errorDisplayField>
    <errorMessage>Geldig tot mag niet voor Geldig vanaf zijn.</errorMessage>
</ValidationRule>