force-app/main/default/objects/Prijsmanagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Minimale_prijs__c</columns>
    <columns>Onderste_staffelwaarde__c</columns>
    <columns>Bovenste_staffelwaarde__c</columns>
    <columns>Eenheidsprijs__c</columns>
    <columns>Relatieve_prijs__c</columns>
    <columns>Actief__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>